--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^16.13.1",
         "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.1",
+        "shortid": "^2.2.15",
         "styled-components": "^5.1.1"
     },
     "devDependencies": {
